# deterministic-code-gen-tool-for-AI

./: .descriptions.xml  .env.example  .gitignore  .pre-commit-config.yaml  .validator.yml  Annotator.xml  CLAUDE.md  DATABASE_AND_STORAGE_GUIDE.md  Debuging.md  DuplicatedCode.xml  DuplicatedCode_aggregate.xml  FIXED_setup_summary.md  FIXES_AND_FEATURES_SUMMARY.md  FRONTEND_ERROR_LOGGING_GUIDE.md  FRONTEND_SUMMARY.md  Find_potential_domain_model_duplicate.sql  GrazieInspection.xml  INTEGRATION_LOG.md  Makefile  PHASE_1_COMPLETION_REPORT.md  PyAbstractClassInspection.xml  PyArgumentListInspection.xml  PyBroadExceptionInspection.xml  PyCallingNonCallableInspection.xml  PyDataclassInspection.xml  PyDefaultArgumentInspection.xml  PyDeprecationInspection.xml  PyInconsistentReturnsInspection.xml  PyListCreationInspection.xml  PyMethodMayBeStaticInspection.xml  PyMethodOverridingInspection.xml  PyMissingConstructorInspection.xml  PyPackageRequirementsInspection.xml  PyRedeclarationInspection.xml  PyShadowingBuiltinsInspection.xml  PyShadowingNamesInspection.xml  PyStatementEffectInspection.xml  PyTypeCheckerInspection.xml  PyUnboundLocalVariableInspection.xml  PyUnresolvedReferencesInspection.xml  (+37 more)
.github/workflows/: ci.yml  frontend.yml
.parser_cache/: file_hashes.json
.windsurf/rules/: rules.md
New_Project/: check_architectural_relationships.py  comprehensive_hallucination_detector.py  debug_parser.py  generic_hexagonal_tagging_system.md  hallucination_detection_framework.py  hallucination_reporter.py  integration_improvements.py
New_Project/generic_hexagonal_tagger/: README.md  main.py  pyproject.toml
New_Project/generic_hexagonal_tagger/config/: logging.py  settings.py
New_Project/generic_hexagonal_tagger/core/domain/: code_component.py  tag.py
New_Project/generic_hexagonal_tagger/infrastructure/adapters/: __init__.py
archive/deprecated/New_Project/: Parse_into_knowledge_graph_repo_MK2.py  ai_hallucination_detector.py  tagging_service copy.py  (+3 more)
backend/: PHASE_3_DEVELOPMENT_PLAN.md  Phase2_Transformation_Refactor_Plan.md  config.py  demo_ui_integration.py  final_phase2_validation.py  main.py  phase2_test_report.md  test_data_compatibility.py  test_direct_orchestrator.py  test_extraction_format.py  test_fastapi_endpoints.py  test_frontend_backend_integration.py  test_job_id_flow.py  test_orchestrator_communication.py  test_orchestrator_flow.py  test_phase1_integration.py  test_phase2_download.py  test_phase2_transformation.py  test_phase3_basic.py  test_phase3_direct.py  test_phase3_endpoints.py  test_sample_module.py
backend/api/: __init__.py  analysis.py  backup.py  files.py  health.py  ide.py  main.py  orchestrator_client.py  runs.py  transformation.py  upload.py
backend/graph_builder/: relationship_extractor.py
backend/neo4j_manager/: __init__.py  main.py
backend/parser/: __init__.py  api_integration.py  ast_visitors.py  codebase_parser.py  config.py  enhanced_integration.py  errors.py  function_parser.py  hash_based_cache.py  integration.py  memory_efficient_parser.py  models.py  module_parser.py  parallel_processor.py  processing_types.py  serialization.py  variable_parser.py
backend/services/: __init__.py  file_service.py
backend/test_output/: neo4j_commands_test_phase1_integration.cypher
backend/transformer/: __init__.py  main.py
backend/uploader/: __init__.py  main.py
database/queries/: add_vector_search_functions.sql  domain_model_duplication.sql  supabase_error_logging_schema.sql  supabase_knowledge_assistant_schema.sql
docs/architecture/: performance_optimizations.md
docs/configuration/: performance_configuration.md
example_code/: INTEGRATION_PSEUDOCODE.md  README.md  ai_code_generator.py  bridge_supabase_neo4j.py  debug_database.py  incremental_parsing_example.py  llm_query_knowledge_base.py
examples/: working_enhanced_integration.py
frontend/: .env.example  README.md  package-lock.json  package.json  vite.config.js
frontend/src/: App.css  App.jsx  index.css
frontend_old/src/: # Step-by-Step React Frontend Setup Guid.md  App.test.js
project_docs/: 2025-07-20_21.md  AST_Parsing_Refactor.md  DETERMINISTIC_AI_FRAMEWORK.md  Front_End_Refactor_Guide.md  PHASE_3_ARCHITECTURAL_IMPROVEMENTS.md  Parsing_research.md  REACT_ARCHITECTURAL_PATTERNS_SUMMARY.md  REACT_REFACTOR_RESEARCH_FINDINGS.md  ai_tagging_prompt_example.md  ai_tagging_rules.md  ast_parser_architecture.md  getting_started_in_React.md  parser_plugin_system.md  prd_analysis_and_questions.md  python_debug_tool.code-workspace
project_docs copy/: ai_tagging_rules.md  app_flow_states.md  development_roadmap.md  hand_off.md  mcp_integration_task_mapping.md  neo4j_integration.md  prd.md  taskmaster_prd_analysis.md  technical_architecture.md
python-debug/: .env.example  SECURITY_ASSESSMENT.md
python-debug/public copy/: index.html
python-debug/src/: App.js  index.css
python-debug/src copy/: App.css
scripts/: README_XVFB.md  chat_history.pkl  dev.py  openai_agent_tool.py  requirements_openai_agent.txt  run_with_xvfb.sh
scripts/demos/: demo_cli_agent.py
scripts/setup/: setup_framework.py
scripts/utilities/: ai_code_assistant.py  dev_validator.py  integration_report.py  project_knowledge_assistant.py  run_framework_validation.py  supabase_knowledge_assistant.py
testing/: test_backend.py
tests/performance/: test_basic_functionality.py  test_hash_based_cache.py  test_integration.py
tools/agents/: cli_knowledge_agent.py
(+137 files in other folders)
